// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogSerializer : getAllInterlocutors : should return array of users 1`] = `
{
  "data": [
    {
      "attributes": {
        "ava": null,
        "email": "111s@11.1",
        "firstName": "assaaa",
        "lastName": "bbsbb",
        "login": "dsdsd",
        "status": "1s",
      },
      "id": "3",
      "links": {
        "self": "http://localhost:5000/api/user/3",
      },
      "type": "User",
    },
    {
      "attributes": {
        "ava": null,
        "email": "111@11.1",
        "firstName": "aaaa",
        "lastName": "bbbb",
        "login": "Artem",
        "status": "1",
      },
      "id": "1",
      "links": {
        "self": "http://localhost:5000/api/user/1",
      },
      "type": "User",
    },
  ],
  "links": {
    "self": "http://localhost:5000/api/example",
  },
}
`;

exports[`DialogSerializer : getAllMessage : should return array with messages 1`] = `
{
  "data": [
    {
      "attributes": {
        "message": "Hello",
        "recipientId": 2,
        "senderId": 1,
      },
      "id": "undefined",
      "links": {
        "self": "http://localhost:5000/api/dialog/message/undefined",
      },
      "type": "Message",
    },
    {
      "attributes": {
        "message": "Hel1lo",
        "recipientId": 3,
        "senderId": 2,
      },
      "id": "undefined",
      "links": {
        "self": "http://localhost:5000/api/dialog/message/undefined",
      },
      "type": "Message",
    },
  ],
  "links": {
    "self": "http://localhost:5000/api/example",
  },
}
`;

exports[`DialogSerializer : sendMessage : should return created message 1`] = `
{
  "data": {
    "attributes": {
      "message": "Hello",
      "recipientId": 2,
      "senderId": 1,
    },
    "id": "undefined",
    "links": {
      "self": "http://localhost:5000/api/dialog/message/undefined",
    },
    "type": "Message",
  },
}
`;
